fix: wrong sql requests - change column 'file_size' to 'size' - add new fields to addFile(), updateEntity() and createStorageEntityByResultSet() - add parameter 'isOnlyReady' for fileExists() - add errorMessage setting in StorageRepositoryWrapper - change exception handling in GlobalErrorHandler